--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,3 +1,10 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}All posts{% endblock %}
+{% block body %}
+    <ul>
+        {% for post in posts  %}
+            <li><a href="{{ path('main.show',{id: post.id}) }}">{{ post.title }}</a></li>
+        {% endfor %}
+    </ul>
 {% endblock %}
