--- a/templates/show/show.html.twig
+++ b/templates/show/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}All posts{% endblock %}
+{% block title %}Your Post{% endblock %}
 {% block body %}
    {{ post.title }}
 {% endblock %}
