--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,8 @@
         {% endblock %}
     </header>
     <body>
-        {% block body %}{% endblock %}
+        <div class="container">
+            {% block body %}{% endblock %}
+        </div>
     </body>
 </html>
