--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -7,5 +7,8 @@
         <li class="nav-item">
             <a class="nav-link" href="{{ path('page_get') }}">All posts</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ path('page_post') }}">Create</a>
+        </li>
     </ul>
 {% endblock %}
