--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -7,10 +7,24 @@
             {{ message }}
         </div>
     {% endfor %}
-    <ul>
-        {% for post in posts  %}
-            <li><a href="{{ path('page_show',{id: post.id}) }}">{{ post.title }}</a></li>
-            <li><a class="text-danger" href="{{ path('page_delete',{id: post.id}) }}">Delete</a></li>
-        {% endfor %}
-    </ul>
+
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">id</th>
+                    <th scope="col">Title</th>
+                    <th scope="col">Action</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for post in posts  %}
+                <tr>
+                    <td>{{ post.id }}</td>
+                    <td><a href="{{ path('page_show',{id: post.id}) }}">{{ post.title }}</a></td>
+                    <td><a class="text-danger" href="{{ path('page_delete',{id: post.id}) }}">Delete</a></td>
+                </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+
 {% endblock %}
