some styles changes,and add Authentication

--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -10,5 +10,8 @@
         <li class="nav-item">
             <a class="nav-link" href="{{ path('page_post') }}">Create</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ path('app_login') }}">Sign in</a>
+        </li>
     </ul>
 {% endblock %}
