--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -10,8 +10,10 @@
         <li class="nav-item">
             <a class="nav-link" href="{{ path('page_post') }}">Create</a>
         </li>
+        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
         <li class="nav-item">
-            <a class="nav-link" href="{{ path('app_login') }}">Sign in</a>
+            <a class="nav-link" href="{{ path('app_logout') }}">Log out</a>
         </li>
+        {% endif %}
     </ul>
 {% endblock %}
